--- a/breaking_app/pubspec.yaml
+++ b/breaking_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_swiper: ^1.1.6
   http: ^0.13.3
+  flip_card: ^0.5.0
 
 dev_dependencies:
   flutter_test:
